crates/uitest/fixtures/ty/const_ty/const_generic_impl_target_array.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: fixtures/ty/const_ty/const_generic_impl_target_array.fe
---
error[8-0000]: type mismatch
   ┌─ const_generic_impl_target_array.fe:26:5
   │
26 │     second
   │     ^^^^^^ expected `()`, but `ref u256` is given

error[8-0068]: explicit reborrow required
   ┌─ const_generic_impl_target_array.fe:23:27
   │
23 │     let first: ref u256 = borrowed.get(0)
   │                           ^^^^^^^^ this argument must be explicitly borrowed as `ref`
   │
   = help: use `ref <place>` when passing a place to a `ref` parameter
